feat: add support to cancel exectuions and WS
